optional different target than for

--- a/addon/templates/components/pop-over.hbs
+++ b/addon/templates/components/pop-over.hbs
@@ -1,5 +1,5 @@
 {{#if active}}
-  {{#ember-tether target=target
+  {{#ember-tether target=_target
                   targetAttachement=targetAttachement
                   attachment=attachment
                   constraints=constraints
