add default attachment and custom classes

--- a/addon/templates/components/pop-over.hbs
+++ b/addon/templates/components/pop-over.hbs
@@ -4,7 +4,7 @@
                     targetAttachement=targetAttachement
                     attachment=attachment
                     constraints=constraints
-                    class="pop-over"}}
+                    class=(concat "pop-over " classes)}}
       <div class="pop-over--wrapper" style={{customStyle}}>
         {{#if title}}
           <div class="pop-over__title">{{title}}</div>
